# digitization-metric

./: README.md  calc.py  pyproject.toml  summarize.py  visualization.py
digi_eval/: __init__.py
example_digitization/digital_data_opacity_1/: img_10.json
