[tool.poetry]
name = "digi-eval"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "digi_eval"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.24.2"
scipy = "^1.10.1"
opencv-python = "^4.7.0.72"
pandas = "^2.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
